<resources>
    <string name="app_name">CreditCircle</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_forgot_password">Error resetting your password</string>
    <string name="password_reset">Please check your email to reset your password</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_bluetooth">Bluetooth</string>

    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="successful">Success!</string>
    <string name="loading">Loading</string>
    <string name="logging_in">Logging in...</string>
    <string name="creating_account">Creating Account...</string>
    <string name="valid_email_error">Enter a valid email address</string>
    <string name="enter_password">Enter a password</string>
    <string name="login_failed">Login Failed</string>
    <string name="sign_up_failed">Sign Up Failed</string>
    <string name="api_error">Cannot connect to API</string>
    <string name="no_internet">You do not have an internet connection</string>
    <string name="ok">OK</string>

    <!-- facebook login -->
    <string name="login_facebook">Log in with Facebook</string>
    <string name="facebook_login_url">https://www.facebook.com/dialog/oauth?client_id=%1$s&amp;redirect_uri=%2$s&amp;scope=email,public_profile</string>

    <!-- linkedin login -->
    <string name="login_linkedin">Log in with LinkedIn</string>
    <string name="linkedin_login_url">https://www.linkedin.com/oauth/v2/authorization?response_type=code&amp;client_id=%1$s&amp;redirect_uri=%2$s&amp;state=%3$s&amp;scope=r_basicprofile</string>

    <!-- Twitter login -->
    <string name="login_twitter">Log in with Twitter</string>
    <string name="twitter_login_url">https://api.twitter.com/oauth/authenticate?oauth_token=%1$s&amp;redirect_uri=%2$s</string>
    <string name="twitter_no_email_title">No Email Found</string>
    <string name="twitter_no_email_body">Twitter did not provide us with your email. Please input your email</string>
    <string name="error_logging_in">There was an error logging you in</string>

    <string name="no_account_yet">No account yet? Create one</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_first_name">Enter a first name</string>
    <string name="enter_last_name">Enter a last name</string>
    <string name="enter_valid_emil">Enter a valid email address</string>
    <string name="passwords_must_match">Passwords must match</string>

    <!-- Settings screen -->
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Change Password</string>
    <string name="terms_of_services">Terms of Use</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="logout">Log Out</string>
    <string name="terms_link">https://app.baseapp.tsl.io/terms</string>
    <string name="send_mail">Send mail...</string>
    <string name="no_email_clients_installed">There are no email clients installed.</string>
    <string name="submit">Submit</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password_error">Old password does not match current password</string>
    <string name="change_password_success">Password changed!</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="new_password_error">New passwords must match</string>
    <string name="old_pass_must_match_current">Old password must match current password</string>
    <string name="field_cannot_be_empty">Field cannot be empty</string>
    <string name="changing_password">Changing Password...</string>
    <string name="log_out">Log out</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="logged_out">Logged Out</string>
    <string name="no">No</string>
    <string name="updating">Updating...</string>
    <string name="update_email">Update Email</string>
    <string name="email_updated">Email Updated</string>
    <string name="email_update_sent">An email has been sent to the email you provided</string>
    <string name="change_password_failed">Error changing password</string>
    <string name="change_email_failed">Error updating email</string>
    <string name="new_email">New Email</string>

    <!-- About page -->
    <string name="website_url">tsl.io</string>
    <string name="facebook_link">TheSilverLogic</string>
    <string name="twitter_link">thesilverlogic</string>
    <string name="instagram_link">thesilverlogic/</string>

    <!-- Crop and Fileter -->
    <string name="crop_instructions">Move and scale image then press button below to crop</string>

    <!-- Filter Strings -->
    <string name="filter_normal">NORMAL</string>
    <string name="filter_amaro">AMARO</string>
    <string name="filter_rise">RISE</string>
    <string name="filter_hudson">HUDSON</string>
    <string name="filter_xproii">XPROII</string>
    <string name="filter_sierra">SIERRA</string>
    <string name="filter_lomo">LOMOFI</string>
    <string name="filter_earlybird">EARLYBIRD</string>
    <string name="filter_sutro">SUTRO</string>
    <string name="filter_toaster">TOASTER</string>
    <string name="filter_brannan">BRANNAN</string>
    <string name="filter_inkwell">INKWELL</string>
    <string name="filter_walden">WALDEN</string>
    <string name="filter_hefe">HEFE</string>
    <string name="filter_valencia">VALENCIA</string>
    <string name="filter_nashville">NASHVILLE</string>
    <string name="filter_1977">1977</string>
    <string name="filter_lordkelvin">LORDKELVIN</string>

    <!-- Edit profile -->
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="facebook_url">Facebook Url</string>
    <string name="instagram_url">Instagram Url</string>
    <string name="linkedin_url">LinkedIn Url</string>
    <string name="twitter_url">Twitter Url</string>
    <string name="update_profile">Update Profile</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="take_picture">Take Picture</string>
    <string name="picture_options">Take a new picture or choose from existing</string>
    <string name="camera_permission">Permission to use camera is required</string>
    <string name="successful_update">Successfully updated user!</string>
    <string name="updating_user">Updating User...</string>
    <string name="fetching_user">Fetching User...</string>

    <!-- Deeplink -->
    <string name="error_finding_user">There was an error finding your information. Please try again.</string>
    <string name="confirming_email">Confirming email...</string>
    <string name="confirm_email_success">Your previous email has been confirmed. Please check the new email you provided</string>
    <string name="verifying_email">Verifying new email...</string>
    <string name="verify_email_success">Your new email has been verified. Login with your new email.</string>
    <string name="user_confirming_email">Confirming Email...</string>
    <string name="user_has_verified_email">Your email has now been verified.</string>

    <!-- BlueTooth -->
    <string name="on">On</string>
    <string name="off">Off</string>

    <!-- Tutorial -->
    <string name="view_tutorial">View Tutorial</string>
    <string name="tutorial_title_1">Tutorial title 1</string>
    <string name="tutorial_body_1">Tutorial body 1</string>
    <string name="tutorial_title_2">Tutorial title 2 - Example of permission request</string>
    <string name="tutorial_body_2">Tutorial body 2 - Camera permission is required for this app</string>
    <string name="tutorial_title_3">Tutorial title 3</string>
    <string name="tutorial_body_3">Tutorial body 3</string>
    <string name="tutorial_title_4">Tutorial title 4</string>
    <string name="tutorial_body_4">Tutorial body 4</string>
    <string name="fined">FinEd</string>
    <string name="pay">Pay</string>
    <string name="home">Home</string>
    <string name="contacts">Contacts</string>
    <string name="request">Request</string>
    <string name="get_loan">Get Loan</string>
    <string name="certificate">certificate</string>

</resources>