<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/loginForm"
        android:focusableInTouchMode="true"
        android:paddingTop="24dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/baseapp_logo"
            android:layout_width="wrap_content"
            android:layout_height="120dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!-- Email Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/white"
                android:hint="@string/email" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/TextLabel"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:inputType="textVisiblePassword"
                android:hint="@string/password"/>
        </android.support.design.widget.TextInputLayout>


        <com.hkm.ui.processbutton.iml.ActionProcessButton
            android:id="@+id/loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:pb_colorComplete="@color/colorPrimary"
            app:pb_colorNormal="@color/colorAccent"
            app:pb_colorPressed="@color/colorAccent"
            app:pb_textComplete="@string/successful"
            app:pb_textProgress="@string/logging_in" />

        <com.hkm.ui.processbutton.iml.ActionProcessButton
            android:id="@+id/facebook_loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:padding="12dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/login_facebook"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:pb_colorComplete="@color/facebookColor"
            app:pb_colorNormal="@color/facebookColor"
            app:pb_colorPressed="@color/facebookColor"
            app:pb_textComplete="@string/successful"
            app:pb_textProgress="@string/logging_in" />

        <com.hkm.ui.processbutton.iml.ActionProcessButton
            android:id="@+id/linkedIn_loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:padding="12dp"
            android:background="@color/linkedinColor"
            android:text="@string/login_linkedin"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:pb_colorComplete="@color/linkedinColor"
            app:pb_colorNormal="@color/linkedinColor"
            app:pb_colorPressed="@color/linkedinColor"
            app:pb_textComplete="@string/successful"
            app:pb_textProgress="@string/logging_in" />

        <com.hkm.ui.processbutton.iml.ActionProcessButton
            android:id="@+id/twitter_loginButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:padding="12dp"
            android:background="@color/twitterColor"
            android:text="@string/login_twitter"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textAllCaps="false"
            app:pb_colorComplete="@color/twitterColor"
            app:pb_colorNormal="@color/twitterColor"
            app:pb_colorPressed="@color/twitterColor"
            app:pb_textComplete="@string/successful"
            app:pb_textProgress="@string/logging_in" />

        <TextView android:id="@+id/link_forgot_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/title_activity_forgot_password"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16dip"/>

        <TextView android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            android:text="@string/no_account_yet"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textSize="16dip"/>

    </LinearLayout>
</ScrollView>